open-webui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ai.valentinus.dev`)
      priority: 10
      services:
        - kind: Service
          name: open-webui-main
          namespace: open-webui-k8s
          passHostHeader: true
          port: 8080
          scheme: http
  tls:
    domains:
      - main: ai.valentinus.dev
    secretName: wildcard-valentinus.dev-tls
